--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">LifeForTheFuture</string>
+    <string name="app_name">Live For The Future</string>
 </resources>
